# rod-cutting

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: python-package.yml  test.yml
rod_cutting/: instance.py  solution.py  solver.py
rod_cutting/capnp/: __init__.py  instance.capnp  solution.capnp
rod_cutting/solvers/: __init__.py  bottom_up.py  memoized_recursive_top_down.py  recursive_top_down.py
tests/: instances.py  solver_test.py  test_instance.py
tests/benchmarks/: benchmark_clrs_15_1.py  pytest.ini
tests/solvers/: test_bottom_up.py  test_recursive_top_down.py  test_recursive_top_down_memoized.py
