[tool.poetry]
name = "rod-cutting"
version = "0.1.0"
description = "Rod cutting algorithms"
authors = ["Sebastian Winkler <sebwink@pm.me>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "rod_cutting" },
]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24.2"
pydantic = "^1.10.5"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pytest-subtests = "^0.10.0"
pytest-benchmark = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
